--- a/lecture-dom.html
+++ b/lecture-dom.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/lecture-dom.js"></script>
+    <!--<script src="js/lecture-dom.js"></script>-->
+    <script src="js/ajax-utils.js"></script>
+    <script src="js/ajax-script.js"></script>
 </head>
 <body>
-<h1 id="title">Lecture 53</h1>
+<h1 id="title">Lecture 57</h1>
 <p>
    Say hello to
     <input type="text" id="name">
     <button>Say it!</button>
 </p>
+<p>
+    <button>Say Hello To Someone on the Server!</button>
+</p>
+
 <div id="content">
 
 </div>
