--- a/lecture-dom.html
+++ b/lecture-dom.html
@@ -15,7 +15,7 @@
     <button>Say it!</button>
 </p>
 <p>
-    <button>Say Hello To Someone on the Server!</button>
+    <button id="ajax-btn">Say Hello To Someone on the Server!</button>
 </p>
 
 <div id="content">
